New Features     * Two new 404 aliens     * enable a comment page cache if the user isn't author of any of the comments and the page is a non-permalink.  votes and friends are updated by javascript
    Additions
    * descriptive example.ini
    * create "trusted_sponsor" who get auto-accepted
    * split off url cache from the permacache, with major clean-up to app_globals
    * Move is_banned_domain() call into POST_submit() so it can take the sanitized url
    * Redirect /r/asdfasdfasdf to the search page, not the create page.
    * updates to draw_load.py
    * orangered envelope goes to unread, not all.
    * Remove "enable whitelisting" checkbox, and switch to new failiens
    * Put verification link on email prefs page

    Bugfixes:
    * split off a minimal api controller for onload calls (which don't care about c.site or c.user, making them cheaper)
    * Assume admins want to keep their cookies forever just like everyone else
    * /randomrising bugfix
    * JSON error page was rendering in html.  it now returns "{ error: ${code} }"

--- a/r2/r2/templates/prefupdate.html
+++ b/r2/r2/templates/prefupdate.html
@@ -40,6 +40,27 @@
 <form action="/post/update" method="post" 
       onsubmit="return post_form(this, 'update')" id="pref-update">
 
+<%
+   if not c.user.email:
+     description = _("not set")
+     v_link = None
+   elif c.user.email_verified:
+     description = _("verified")
+     v_link = None
+   elif c.user.email_verified is False:
+     description = _("verification pending")
+     v_link = _("click to resend")
+   else:
+     description = _("unverified")
+     v_link = _("click to verify")
+
+   if v_link and not thing.verify:
+     description = "(%s;&#32;<a href='/verify'>%s</a>)" % (description, v_link)
+     description = unsafe(description)
+   else:
+     description = "(%s)" % description
+%>
+
 <div class="spacer">
   <%utils:round_field title="${_('current password')}" description="${_('(required)')}">
     <input type="password" name="curpass" />
@@ -49,21 +70,11 @@
 
 %if thing.email:
 <div class="spacer">
-  <%
-     if c.user.email_verified:
-       description = _("verified")
-     elif c.user.email_verified is False:
-       description = _("verification pending")
-     else:
-       description = _("unverified")
-     description = "(%s)" % description
-     %>
   <%utils:round_field title="${_('email')}" description="${description}">
     <input type="text" name="email" value="${getattr(c.user, 'email', '')}"/>
     ${error_field("BAD_EMAILS", "email")}
   </%utils:round_field>
-</div>  
-%endif
+</div>
 
 %if thing.password:
 <div class="spacer">
