--- a/r2/r2/templates/redditfooter.html
+++ b/r2/r2/templates/redditfooter.html
@@ -33,7 +33,13 @@
         ${toolbar}
       </div>
       %endfor
-
+    %if g.domain != "reddit.com":
+      <!-- http://code.reddit.com/LICENSE see Exhibit B -->
+      <a href="http://code.reddit.com" style="text-align:center;display:block">
+        <img src="http://code.reddit.com/reddit_logo.png" 
+             style="width:140px"/>
+      </a>
+    %endif
     <p class="bottommenu">
       ${text_with_links(
               _("Use of this site constitutes acceptance of our "
