--- a/r2/r2/templates/frametoolbar.html
+++ b/r2/r2/templates/frametoolbar.html
@@ -78,7 +78,7 @@
        onmouseup="toolbar.pop_button(this)"
        onclick="toolbar.serendipity()"
        href="${add_sr('/random')}"
-       target="_top" />
+       target="_top">
       %if thing.default_sr:
         ${_("serendipity")}
       %else:
@@ -152,6 +152,7 @@
         </p>
       </div>
     </div>
+  </div>
 </body>
 </%def>
 
@@ -190,6 +191,7 @@
 
 
   %if thing.user_is_loggedin:
+    <span>
     %if thing.saved:
       ${state_button("unsave", _("unsave"),
         "return change_state(this, 'unsave');", "<b>%s</b>" % _("unsaved"),
@@ -199,19 +201,30 @@
          "return change_state(this, 'save');", "<b>%s</b>" % _("saved"),
          a_class="clickable")}
     %endif
+    </span><span>
+    %if thing.hidden:
+      ${state_button("unhide", _("unhide"),
+        "return change_state(this, 'unhide');", "<b>%s</b>" % _("unhidden"),
+        a_class="clickable")}
+    %else:
+       ${state_button("hide", _("hide"),
+         "return change_state(this, 'hide');", "<b>%s</b>" % _("hide"),
+         a_class="clickable")}
+    %endif
+    </span>
   %endif
 
   <a href="/toolbar/comments/${thing._id36}" target="reddit_panel"
      title="${_('toggle the comments panel')}"
      onclick="toolbar.comments_pushed(this); return toolbar.panel_loadurl(this.href);"
      class="comments comments-button">${thing.comment_label}</a>
-  </span>
+</span>
 
-  %if thing._fullname and thing.expanded:
-    <script type="text/javascript">
-      $(function() {
-        toolbar.comments_pushed($('.comments-button'));
-      });
-    </script>
-  %endif
+%if thing._fullname and thing.expanded:
+  <script type="text/javascript">
+    $(function() {
+      toolbar.comments_pushed($('.comments-button'));
+    });
+  </script>
+%endif
 </%def>
