--- a/r2/r2/templates/searchbar.html
+++ b/r2/r2/templates/searchbar.html
@@ -29,6 +29,12 @@
 
 <% isize = 60 %>
 
+<div style="float:right; margin: 5px">
+  <div>Powered by:</div>
+  <a href="http://indextank.com/">
+    <img src="/static/flaptor.png" alt="Powered by IndexTank"/>
+  </a>
+</div>
 %if thing.prev_search and thing.elapsed_time > 0:
   <div class="search-summary">
     <%
@@ -58,7 +64,8 @@
 
   <div id="previoussearch">
     ${SearchForm(prev_search = thing.prev_search,
-                 search_params = thing.search_params)}
+                 search_params = thing.search_params,
+                 site=thing.site,
+                 simple=thing.simple, restrict_sr=thing.restrict_sr)}
   </div>
 </div>
-
