--- a/r2/r2/templates/createsubreddit.html
+++ b/r2/r2/templates/createsubreddit.html
@@ -62,7 +62,7 @@ function update_title(elem) {
      %endif
      >
 %if thing.site:
-  <h1>${_("manage your reddit")}
+  <h1>${_("community settings")}
   %if thing.site:
     | &#32;<b>${thing.site.name}</b>
   %endif
@@ -72,7 +72,7 @@ function update_title(elem) {
     <p class="infobar">
       ${_("that subreddit doesn't exist, but you can create it here.")}</p>
   %endif
-  <h1>${_("create a reddit")}</h1>
+  <h1>${_("create a community")}</h1>
 %endif
 
 <div class="pretty-form" id="sr-form">
@@ -224,6 +224,12 @@ function update_title(elem) {
                       _sr_path = True)}
         &#32;
         <span class="gray">(${_("leaves this page")})</span>
+        </li>
+        <li>
+          <lable for="header-title">header mouseover text:</lable>
+          <input type="text" name="header-title" id="header-title"
+                 value="${thing.site.header_title}"
+                 />
         </li>
         <li>
           <%utils:image_upload post_target="/api/upload_sr_img" 
