--- a/r2/r2/templates/frame.html
+++ b/r2/r2/templates/frame.html
@@ -35,6 +35,13 @@
            instead of just having /favicon.ico exist. -->
       <link rel="icon" href="http://${domain(thing.url)}/favicon.ico" type="image/x-icon">
     %endif
+    <link rel="image_src" type="image/png"
+          %if thing.thumbnail:
+             href="${thing.thumbnail}"
+          %else:
+             href="http://www.reddit.com/static/apple-touch-icon.png"
+          %endif
+    />
 
   </head>
   <frameset framespacing="0" frameborder="0" border="0" rows="20px, 100%"
